--- a/scripts/net/README.org
+++ b/scripts/net/README.org
@@ -118,8 +118,41 @@ To examine the generated certificate:
 #+end_src
 
 
-** Create a certificate request for =cp=
+** Create a certificate for =cp=
+We create a certificate for =cp.qvm0.lan= signed by our =QVM= certificate authority,
+in one step.
+Alternative would be to first create a certificate request,
+and then convert it to a x509 certificate.
 
+
+#+begin_src sh :tangle gen-host-cert.sh
+  args=(
+    -batch # Non-interactive mode
+    -x509  # Output a certificate directly, rather than a request
+    -out "${QVM_DIR}/certs/hosts/cp/cert.pem" # The generated certificate file
+    -newkey rsa:2048 # Generate the certified keypair
+    -keyout "${QVM_DIR}/certs/hosts/cp/priv.pem" # Generated private key
+    -noenc # Do not encrypt the private key
+    -subj "/CN=cp.qvm0.lan" # The identity bound by the certificate to the keypair
+    -addext "subjectAltName = DNS:cp.qvm0" # Some flexibility for the valid domain names
+    -addext "extendedKeyUsage=critical,serverAuth"
+    -addext "basicConstraints = critical, CA:false"
+    -days 365
+    # Our QVM certificate authority
+    -CA "${QVM_DIR}/certs/ca/cert.pem"
+    -CAkey "${QVM_DIR}/certs/ca/priv.pem"
+  )
+
+  openssl req "${args[@]}"
+#+end_src
+
+To examine the generated cert:
+
+#+begin_src sh
+  openssl x509 -in "${QVM_DIR}/certs/hosts/cp/cert.pem" -text -noout
+#+end_src
+
+To examine the c
 
 * Sources
 I found the following online documentation sources useful:
