--- a/README.org
+++ b/README.org
@@ -23,7 +23,8 @@ To bring up the appartus:
   qvm-dns up
 #+end_src
 
-- Start the virtual machines
+- Start the virtual machines.
+  Assuming existing VM disks =${QVM_DIR}/machines/{cp,wk1,wk2}.qcow2=:
 #+begin_src sh :tangle
   for vm in cp wk1 wk2; do
     qvm-run -d "${vm}"
@@ -33,6 +34,11 @@ To bring up the appartus:
 - SSH to the VMs from the host (assuming key were provisioned on the guest by cloud-init)
 #+begin_src sh
   ssh -i "${QVM_DIR}/ssh/id_ed25519" root@cp.qvm0.lan
+#+end_src
+
+- To stop a VM
+#+begin_src sh
+  kill "$(cat "${QVM_DIR}/run/${vm}.pid")"
 #+end_src
 
 ** Creating virtual machines
